<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_user_item"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_gambar_user"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/user_photo"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_nama_pengguna"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_gambar_user"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/img_gambar_user"
            card_view:layout_constraintTop_toTopOf="@id/img_gambar_user"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:text="@string/lorem_ipsum"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toTopOf="@id/tv_date"
            card_view:layout_constraintEnd_toEndOf="@id/tv_nama_pengguna"
            card_view:layout_constraintStart_toStartOf="@id/tv_nama_pengguna"
            card_view:layout_constraintTop_toBottomOf="@id/tv_nama_pengguna" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:text="@string/_01_12_22"
            android:textSize="16sp"
            android:gravity="end"
            android:paddingRight="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/img_gambar_user" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>